# ros-ros2-limitations

./: README.md
media/: README.md
perception-system/src/kinect_perception/: CMakeLists.txt  README.md  package.xml
perception-system/src/kinect_perception/launch/: kinect_gazebo.launch.py
perception-system/src/kinect_perception/scripts/: save_pcd_node.py
perception-system/src/kinect_perception/urdf/: kinect_sensor.urdf.xacro
ros-simulation/src/pick_place_controller/: CMakeLists.txt  README.md  package.xml
ros-simulation/src/pick_place_controller/launch/: ur10e_simulation.launch
ros-simulation/src/pick_place_controller/src/: ur10e_pick_place.cpp
ros-simulation/src/pick_place_controller/sripts/: pick_place_node.py
ros2-simulation/src/ur10e_standalone_gripper/: CMakeLists.txt  README.md  package.xml
ros2-simulation/src/ur10e_standalone_gripper/launch/: standalone_gripper.launch.py
