<?xml version="1.0"?>
<package format="2">
  <name>kinect_perception</name>
  <version>1.0.0</version>
  <description>Gazebo 3D Kinect depth perception simulation and point cloud logging pipeline</description>

  <maintainer email="user@example.com">Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
