<?xml version="1.0"?>
<package format="2">
  <name>pick_place_controller</name>
  <version>1.0.0</version>
  <description>Kinematic control and MoveIt trajectory interface for UR10e and Robotiq Gripper</description>

  <maintainer email="user@example.com">Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
